# edge-tts-rust

./: Cargo.toml  LICENSE  README.md
benches/: protocol.rs
examples/: list_voices.rs  synthesize.rs
src/: client.rs  constants.rs  error.rs  lib.rs  main.rs  options.rs  protocol.rs  subtitles.rs  types.rs
tests/: live.rs  protocol.rs
