[package]
name = "edge-tts-rust"
version = "0.1.3"
edition = "2024"
description = "High-performance Rust client for Microsoft Edge Read Aloud TTS"
license = "MIT"
repository = "https://github.com/initsnow/edge-tts-rust"
readme = "README.md"
homepage = "https://github.com/initsnow/edge-tts-rust"
documentation = "https://docs.rs/edge-tts-rust"
keywords = ["tts", "edge-tts", "speech", "audio", "async"]
categories = ["api-bindings", "multimedia::audio"]
exclude = ["/target", "/tmp", "/.direnv"]

[lib]
name = "edge_tts_rust"
path = "src/lib.rs"

[dependencies]
async-stream = "0.3"
bytes = "1.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
http = "1.3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["brotli", "charset", "deflate", "gzip", "http2", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.45", features = ["fs", "io-util", "macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
url = "2.5"
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "protocol"
harness = false
